Api.Shopping/Envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/payments/cost"
                route:
                  prefix_rewrite: "/payments/cost"
                  cluster: payments_service
              - match:
                  prefix: "/pm"
                route:
                  prefix_rewrite: "/payments/methods"
                  cluster: payments_service
              - match:
                  prefix: "/nav"
                route:
                  prefix_rewrite: "/navigation"
                  cluster: catalogue_service
              - match:
                  prefix: "/prods"
                route:
                  prefix_rewrite: "/products"
                  cluster: catalogue_service
              - match:
                  prefix: "/prod"
                route:
                  prefix_rewrite: "/products"
                  cluster: catalogue_service
              - match:
                  prefix: "/auth"
                route:
                  prefix_rewrite: "/"
                  cluster: authentication_service
          http_filters:
          - name: envoy.router
  clusters:
  - name: payments_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: payments_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: paymentsapi
                port_value: 80
  - name: catalogue_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: catalogue_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: catalogueapi
                port_value: 80
  - name: authentication_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: authentication_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: authenticationapi
                port_value: 80
